# host-migration-guard

./: README.md  pyproject.toml  requirements.txt
.axentx-dev-bot/: 20260618-095811-host-migration-guard-docs-0cb3915b.md
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md  TECH_SPEC.md
src/: host_migration_guard.py  migration_guard.py
tests/: test_host_migration_guard.py  test_migration_guard.py
