[project]
name = "host-migration-guard"
version = "0.1.0"
description = "A tiny tool that simulates automated host platform migration with minimal downtime."
authors = [{name = "Axentx"}]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
